fix: do not wrap all bookmark components with `<li>`

--- a/src/components/Bookmark/Bookmark.module.css
+++ b/src/components/Bookmark/Bookmark.module.css
@@ -1,11 +1,5 @@
 @import '../variables.css';
 
-.bookmark-item {
-  all: unset;
-  display: block;
-  max-width: 100%;
-}
-
 .bookmark {
   all: unset;
   display: block;
